Fix alignment

--- a/src/elements/Arrow.scss
+++ b/src/elements/Arrow.scss
@@ -20,7 +20,7 @@
 
 #arrow {
 	path {
-		fill: #ccc;
+		fill: colors.$grey-7;
 		stroke-width: 0.1px;
 		stroke: colors.$primary-7 !important;
 		font-size: 0.1em;
