--- a/src/elements/Link.scss
+++ b/src/elements/Link.scss
@@ -1,8 +1,6 @@
 @use "../colors.scss";
 
 .Link {
-	stroke: red;
-	stroke-width: 0.1px;
 	.ant {
 		stroke: colors.$primary-7 !important;
 		stroke-width: 0.1px;
